--- a/src/components/shared/FooterSection.astro
+++ b/src/components/shared/FooterSection.astro
@@ -10,8 +10,8 @@ const t = useTranslations(lang);
     <div class="xl:grid xl:grid-cols-3 xl:gap-8">
       <div class="space-y-8">
         <img
-          src="/logos/logo-starfilters.png"
-          alt="Starfilters"
+          src="/images/home-page/Logo%20de%20Star%20Filters.png"
+          alt="Star Filters"
           class="h-20 w-auto"
         />
         <p class="text-sm/6 text-balance text-muted-foreground">
