--- a/src/components/shared/Stats.astro
+++ b/src/components/shared/Stats.astro
@@ -3,35 +3,35 @@ import { getLangFromUrl, useTranslations } from "@/i18n/utils";
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
+
+const stats = [
+  { label: t('stats.projects'), value: t('stats.projectsNumber')?.trim() },
+  { label: t('stats.experience'), value: t('stats.experienceNumber')?.trim() },
+  { label: t('stats.clients'), value: t('stats.clientsNumber')?.trim() },
+];
 ---
 
 <div class="bg-background py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <dl class="grid grid-cols-1 gap-x-8 gap-y-16 text-center lg:grid-cols-3">
-      <div class="mx-auto flex max-w-xs flex-col gap-y-4">
-        <dt class="text-base/7 text-muted-foreground">{t('stats.projects')}</dt>
-        <dd
-          class="order-first text-3xl font-semibold tracking-tight text-foreground sm:text-5xl"
-        >
-          {t('stats.projectsNumber')}
-        </dd>
-      </div>
-      <div class="mx-auto flex max-w-xs flex-col gap-y-4">
-        <dt class="text-base/7 text-muted-foreground">{t('stats.experience')}</dt>
-        <dd
-          class="order-first text-3xl font-semibold tracking-tight text-foreground sm:text-5xl"
-        >
-          {t('stats.experienceNumber')}
-        </dd>
-      </div>
-      <div class="mx-auto flex max-w-xs flex-col gap-y-4">
-        <dt class="text-base/7 text-muted-foreground">{t('stats.clients')}</dt>
-        <dd
-          class="order-first text-3xl font-semibold tracking-tight text-foreground sm:text-5xl"
-        >
-          {t('stats.clientsNumber')}
-        </dd>
-      </div>
+      {stats.map((stat) => (
+        <div class="mx-auto flex max-w-xs flex-col gap-y-4">
+          {stat.value ? (
+            <>
+              <dd class="order-first text-3xl font-semibold tracking-tight text-foreground sm:text-5xl">
+                {stat.value}
+              </dd>
+              <dt class="text-base/7 text-muted-foreground font-medium">
+                {stat.label}
+              </dt>
+            </>
+          ) : (
+            <dd class="order-first text-2xl font-semibold tracking-tight text-foreground sm:text-3xl">
+              {stat.label}
+            </dd>
+          )}
+        </div>
+      ))}
     </dl>
   </div>
 </div>
