--- a/src/components/shared/LogoSection.astro
+++ b/src/components/shared/LogoSection.astro
@@ -5,45 +5,13 @@
 <div class="bg-background py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <h2 class="text-center text-lg/8 font-semibold text-foreground">
-      Confianza de los equipos más innovadores del mundo
+      Presencia en las industrias más exigentes
     </h2>
-    <div
-      class="mx-auto mt-10 grid max-w-lg grid-cols-4 items-center gap-x-8 gap-y-10 sm:max-w-xl sm:grid-cols-6 sm:gap-x-10 lg:mx-0 lg:max-w-none lg:grid-cols-5"
-    >
+    <div class="mx-auto mt-10 flex max-w-4xl items-center justify-center">
       <img
-        alt="Transistor"
-        src="https://tailwindcss.com/plus-assets/img/logos/158x48/transistor-logo-gray-900.svg"
-        width={158}
-        height={48}
-        class="col-span-2 max-h-12 w-full object-contain lg:col-span-1"
-      />
-      <img
-        alt="Reform"
-        src="https://tailwindcss.com/plus-assets/img/logos/158x48/reform-logo-gray-900.svg"
-        width={158}
-        height={48}
-        class="col-span-2 max-h-12 w-full object-contain lg:col-span-1"
-      />
-      <img
-        alt="Tuple"
-        src="https://tailwindcss.com/plus-assets/img/logos/158x48/tuple-logo-gray-900.svg"
-        width={158}
-        height={48}
-        class="col-span-2 max-h-12 w-full object-contain lg:col-span-1"
-      />
-      <img
-        alt="SavvyCal"
-        src="https://tailwindcss.com/plus-assets/img/logos/158x48/savvycal-logo-gray-900.svg"
-        width={158}
-        height={48}
-        class="col-span-2 max-h-12 w-full object-contain sm:col-start-2 lg:col-span-1"
-      />
-      <img
-        alt="Statamic"
-        src="https://tailwindcss.com/plus-assets/img/logos/158x48/statamic-logo-gray-900.svg"
-        width={158}
-        height={48}
-        class="col-span-2 col-start-2 max-h-12 w-full object-contain sm:col-start-auto lg:col-span-1"
+        src="/images/home-page/Nuestros%20Clientes.png"
+        alt="Logos de clientes Star Filters"
+        class="w-full max-w-4xl object-contain"
       />
     </div>
   </div>
