--- a/src/pages/en/cleanrooms/index.astro
+++ b/src/pages/en/cleanrooms/index.astro
@@ -78,8 +78,8 @@ const breadcrumbSchema = generateBreadcrumbSchema([
               class="aspect-square overflow-hidden rounded-xl shadow-xl outline-1 -outline-offset-1 outline-black/10"
             >
               <img
-                src="https://images.unsplash.com/photo-1590650516494-0c8e4a4dd67e?&auto=format&fit=crop&crop=center&w=560&h=560&q=90"
-                alt=""
+                src="/images/cleanrooms-page/Construcción%20Cuartos%20Limpios%20Star%20Filters.JPG"
+                alt="Star Filters cleanroom construction"
                 class="block size-full object-cover"
               />
             </div>
@@ -87,8 +87,8 @@ const breadcrumbSchema = generateBreadcrumbSchema([
               class="-mt-8 aspect-square overflow-hidden rounded-xl shadow-xl outline-1 -outline-offset-1 outline-black/10 lg:-mt-40"
             >
               <img
-                src="https://images.unsplash.com/photo-1557804506-669a67965ba0?&auto=format&fit=crop&crop=left&w=560&h=560&q=90"
-                alt=""
+                src="/images/cleanrooms-page/Filtros%20Star%20Cuarto%20Limpio.JPG"
+                alt="Star Filters HEPA filtration system"
                 class="block size-full object-cover"
               />
             </div>
@@ -96,8 +96,8 @@ const breadcrumbSchema = generateBreadcrumbSchema([
               class="aspect-square overflow-hidden rounded-xl shadow-xl outline-1 -outline-offset-1 outline-black/10"
             >
               <img
-                src="https://images.unsplash.com/photo-1559136555-9303baea8ebd?&auto=format&fit=crop&crop=left&w=560&h=560&q=90"
-                alt=""
+                src="/images/cleanrooms-page/Certificado%20ISO%2014644.JPG"
+                alt="ISO 14644 certification"
                 class="block size-full object-cover"
               />
             </div>
@@ -105,8 +105,8 @@ const breadcrumbSchema = generateBreadcrumbSchema([
               class="-mt-8 aspect-square overflow-hidden rounded-xl shadow-xl outline-1 -outline-offset-1 outline-black/10 lg:-mt-40"
             >
               <img
-                src="https://images.unsplash.com/photo-1598257006458-087169a1f08d?&auto=format&fit=crop&crop=center&w=560&h=560&q=90"
-                alt=""
+                src="/images/cleanrooms-page/Puerta%20Giratoria%20Star%20Filters.JPG"
+                alt="Star Filters revolving airlock door"
                 class="block size-full object-cover"
               />
             </div>
