--- a/src/pages/login/index.astro
+++ b/src/pages/login/index.astro
@@ -82,9 +82,9 @@ const message = url.searchParams.get('message');
   <div class="flex min-h-screen flex-col justify-center px-6 py-12 lg:px-8">
     <div class="sm:mx-auto sm:w-full sm:max-w-sm">
       <img
-        src="/logos/logo-starfilters.png"
-        alt="StarFilters"
-        class="mx-auto h-10 w-auto"
+        class="mx-auto h-12 w-auto"
+        src="/images/home-page/Logo%20de%20Star%20Filters.png"
+        alt="Starfilters"
       />
       <h2 class="mt-10 text-center text-2xl/9 font-bold tracking-tight text-foreground">
         {t('auth.login.title')}
